<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/normal" />

    <TextView
        android:id="@+id/bmiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/normalBMI"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="8sp"
        android:paddingTop="5dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiText" />

    <TextView
        android:id="@+id/height"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="8sp"
        android:paddingTop="5dp"
        android:text="@string/height"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="193dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/editWeight"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toEndOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/bmiText" />

    <EditText
        android:id="@+id/heightText"
        android:layout_width="193dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/editHeight"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toEndOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/weightText" />

    <Button
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/calBtn"
        app:layout_constraintTop_toBottomOf="@+id/heightText" />
</androidx.constraintlayout.widget.ConstraintLayout>